# data-for-community-change

backend/: .env  main.py  pyproject.toml  repository.py
backend/helpers/: extract_data.py
frontend/: nuxt.config.ts  package-lock.json  package.json
frontend/components/: BottomBar.vue  FireMap.vue  Map.vue  Menu.vue  PopupContent.vue  PopupFireContent.vue  ShelterCard.vue
frontend/layouts/: default.vue
frontend/pages/: index.vue  profile.vue  shelters.vue
frontend/stores/: app.ts
